unpackaged/main/default/objects/Prescription__c/fields/Character_Count_Dosage__c.field-meta.xml
<CustomField>
    <fullName>Character_Count_Dosage__c</fullName>
    <formula>LEN( Dosage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Character Count Dosage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>