unpackaged/main/default/objects/Prescription__c/fields/Date_Dispensed__c.field-meta.xml
<CustomField>
    <fullName>Date_Dispensed__c</fullName>
    <label>Date Dispensed</label>
    <type>Date</type>
</CustomField>