unpackaged/main/default/objects/Prescription__c/fields/Delivery_Service__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Service__c</fullName>
    <label>Delivery Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DPD</fullName>
                <default>true</default>
                <label>DPD</label>
            </value>
            <value>
                <fullName>Royal Mail</fullName>
            </value>
            <value>
                <fullName>Collection from WebRx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>