unpackaged/main/default/objects/Prescription__c/fields/Dispensing_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispensing_Status__c</fullName>
    <label>Dispensing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>With the pharmacy to dispense</fullName>
            </value>
            <value>
                <fullName>Dispensed by the pharmacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>