unpackaged/main/default/objects/Prescription__c/fields/Doctor_GMC_Number__c.field-meta.xml
<CustomField>
    <fullName>Doctor_GMC_Number__c</fullName>
    <formula>TEXT(Prescribing_Doctor__r.GMC_Reference_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Doctor GMC Number</label>
    <type>Text</type>
</CustomField>