unpackaged/main/default/objects/Prescription__c/fields/Dosage__c.field-meta.xml
<CustomField>
    <fullName>Dosage__c</fullName>
    <description>Dosage of the medication prescribed</description>
    <inlineHelpText>Dosage of the medication prescribed</inlineHelpText>
    <label>Dosage</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>