unpackaged/main/default/objects/Prescription__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Medication</label>
    <referenceTo>Medications__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>