unpackaged/main/default/objects/Prescription__c/fields/Medication_Hold__c.field-meta.xml
<CustomField>
    <fullName>Medication_Hold__c</fullName>
    <formula>IF (  Patient__r.Medication_Hold__c  = TRUE, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;),&quot;&quot;)</formula>
    <inlineHelpText>Patient is on Medication Hold</inlineHelpText>
    <label>Medication Hold</label>
    <type>Text</type>
</CustomField>