unpackaged/main/default/objects/Prescription__c/fields/MedicationPicklist__c.field-meta.xml
<CustomField>
    <fullName>MedicationPicklist__c</fullName>
    <description>Prescribed medication</description>
    <inlineHelpText>Select the medication you wish to prescribe to the patient</inlineHelpText>
    <label>Medication (old field)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Medications</valueSetName>
    </valueSet>
</CustomField>