unpackaged/main/default/objects/Prescription__c/fields/MedicationRecordId__c.field-meta.xml
<CustomField>
    <fullName>MedicationRecordId__c</fullName>
    <formula>Medication__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MedicationRecordId</label>
    <type>Text</type>
</CustomField>