unpackaged/main/default/objects/Prescription__c/fields/Meds_Order__c.field-meta.xml
<CustomField>
    <fullName>Meds_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meds Order</label>
    <referenceTo>Meds_Order__c</referenceTo>
    <relationshipLabel>Prescriptions</relationshipLabel>
    <relationshipName>Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>