unpackaged/main/default/objects/Prescription__c/fields/Override_Medication_Hold__c.field-meta.xml
<CustomField>
    <fullName>Override_Medication_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if you have authorisation from the doctor to override a patient medication hold, for example for a non-TRT medication</inlineHelpText>
    <label>Override Medication Hold</label>
    <type>Checkbox</type>
</CustomField>