unpackaged/main/default/objects/Prescription__c/fields/Patient_Address__c.field-meta.xml
<CustomField>
    <fullName>Patient_Address__c</fullName>
    <formula>Patient__r.ShippingStreet &amp; BR() &amp;
Patient__r.ShippingCity &amp; &quot; &quot; &amp;
Patient__r.ShippingState &amp; &quot; &quot; &amp;
Patient__r.ShippingPostalCode &amp; BR() &amp;
Patient__r.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Address</label>
    <type>Text</type>
</CustomField>