unpackaged/main/default/objects/Prescription__c/fields/Prescription_Status__c.field-meta.xml
<CustomField>
    <fullName>Prescription_Status__c</fullName>
    <label>Prescription Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>For Doctor Review</fullName>
                <default>true</default>
                <label>For Doctor Review</label>
            </value>
            <value>
                <fullName>Approved by Doctor</fullName>
            </value>
            <value>
                <fullName>Rejected by Doctor</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Dispatched by pharmacy</fullName>
            </value>
            <value>
                <fullName>Approved by Doctor (re-submit to pharmacy)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>