unpackaged/main/default/objects/Prescription__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity of the medication required</description>
    <inlineHelpText>Quantity of the medication required</inlineHelpText>
    <label>Quantity</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>