unpackaged/main/default/objects/Prescription__c/fields/Quantity_number__c.field-meta.xml
<CustomField>
    <fullName>Quantity_number__c</fullName>
    <description>Converts quantity field to numeric quantity field</description>
    <formula>VALUE( Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Converts quantity field to numeric quantity field</inlineHelpText>
    <label>Quantity (number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>