unpackaged/main/default/objects/Prescription__c/fields/Repeats__c.field-meta.xml
<CustomField>
    <fullName>Repeats__c</fullName>
    <description>Number of repeat orders of the medication before a new prescription is required</description>
    <inlineHelpText>Number of repeat orders of the medication before a new prescription is required</inlineHelpText>
    <label>Repeats</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>