unpackaged/main/default/objects/Prescription__c/fields/Repeats_Issued__c.field-meta.xml
<CustomField>
    <fullName>Repeats_Issued__c</fullName>
    <label>Repeats Issued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>