unpackaged/main/default/objects/Prescription__c/fields/Repeats_Permitted__c.field-meta.xml
<CustomField>
    <fullName>Repeats_Permitted__c</fullName>
    <label>Repeats Permitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>