unpackaged/main/default/objects/Prescription__c/fields/Repeats_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Repeats_Remaining__c</fullName>
    <formula>Repeats_Permitted__c - Repeats_Issued__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Repeats Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>