unpackaged/main/default/objects/Prescription__c/validationRules/Prevent_order_if_on_meds_hold.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_order_if_on_meds_hold</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Patient__r.Medication_Hold__c = TRUE, Override_Medication_Hold__c = FALSE)</errorConditionFormula>
    <errorMessage>Patient is on medication hold, tick override medication hold checkbox if doctor authorises non-TRT medication to be dispatched</errorMessage>
</ValidationRule>