unpackaged/main/default/objects/Prescription__c/validationRules/Quantity_Is_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Is_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER(Quantity__c ))</errorConditionFormula>
    <errorMessage>Quantity must be Number</errorMessage>
</ValidationRule>