unpackaged/main/default/objects/Prescription__c/listViews/Chris_Airey_Scripts.listView-meta.xml
<ListView>
    <fullName>Chris_Airey_Scripts</fullName>
    <columns>NAME</columns>
    <columns>Medication__c</columns>
    <columns>Patient__c</columns>
    <columns>Prescribing_Doctor__c</columns>
    <columns>Prescription_Status__c</columns>
    <columns>Dispensing_Status__c</columns>
    <columns>Date_Dispensed__c</columns>
    <columns>Pharmacy__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Quantity__c</columns>
    <columns>Approved_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prescribing_Doctor__c</field>
        <operation>contains</operation>
        <value>Chris Airey</value>
    </filters>
    <label>Chris Airey Scripts</label>
</ListView>