unpackaged/main/default/objects/Prescription__c/listViews/NPLabs_Enanthate_Prescriptions.listView-meta.xml
<ListView>
    <fullName>NPLabs_Enanthate_Prescriptions</fullName>
    <columns>NAME</columns>
    <columns>Medication__c</columns>
    <columns>Quantity__c</columns>
    <columns>Patient__c</columns>
    <columns>Prescribing_Doctor__c</columns>
    <columns>Pharmacy__c</columns>
    <columns>Prescription_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Dispensing_Status__c</columns>
    <columns>Date_Dispensed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Medication__c</field>
        <operation>contains</operation>
        <value>Enanthate</value>
    </filters>
    <filters>
        <field>Pharmacy__c</field>
        <operation>equals</operation>
        <value>NPLabs</value>
    </filters>
    <label>NPLabs Enanthate Prescriptions</label>
</ListView>